--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ script:
   -yarn build
 deploy:
   provider: pages
-  edge: true,
+  edge: true
   skip-cleanup: true
-  keep-history:tru
+  keep-history: true
   github-token: $GITHUB_TOKEN
   local-dir: dist/
   target-branch: gh-pages
